# meida_admin

./: .env  Cargo.toml  README.md  diesel.toml
application/: Cargo.toml
application/src/use_cases/: get_house.rs  get_residential.rs  mod.rs  save_house.rs  save_residential.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/house/: mod.rs
domain/src/house/aggregation/: house.rs
domain/src/house/entities/: house.rs
domain/src/house/repositories/: house.rs
domain/src/house/service/: house.rs
domain/src/house_sales/: mod.rs
domain/src/house_sales/aggregates/: sales.rs
domain/src/house_sales/command/: mod.rs  new_house.rs  update_house.rs
domain/src/house_sales/entities/: mod.rs  second_hand.rs
domain/src/house_sales/events/: event_queue.rs  house.rs  mod.rs
domain/src/repositories/: mod.rs  sales_repository.rs
domain/src/residential/: mod.rs
domain/src/residential/entities/: residential.rs
domain/src/residential/repositories/: create_residential.rs  mod.rs  residential.rs
domain/src/residential/service/: create_residential.rs  residential.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/2024-07-23-231457_create_residential/: up.sql
infrastructure/migrations/2024-07-24-231213_create_houses/: up.sql
infrastructure/src/: lib.rs  schema.rs
infrastructure/src/db/: connection.rs
infrastructure/src/repositories/: mod.rs  mysql_house_repository.rs  mysql_residential_repository.rs
infrastructure/src/repositories/dao/: house.rs  residential.rs
presentation/: Cargo.toml
presentation/src/: lib.rs  web.rs
presentation/src/handlers/: house.http  house.rs  mod.rs  residential.http  residential.rs
presentation/src/routes/: house.rs  mod.rs  residential_routes.rs  use_routes.rs
src/: main.rs
