[package]
name = "meida_admin"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["application", "domain", "infrastructure", "presentation"]

[dependencies]
actix-web = { workspace = true }
presentation = { workspace = true }
env_logger = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
structopt = "0.3.26"
serde_json = "1.0.81"
serde_with = { version = "3.8.0", features = ["time_0_3"] }
serde = { version = "1.0.144", features = ["derive"] }
derive_more = "0.99.17"
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
actix-web = "4.8.0"
log = "0.4.22"
env_logger = "0.11.3"
domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
application = { path = "application" }
presentation = { path = "presentation" }
