[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true }
r2d2 = { workspace = true }
domain = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }